@@ -20,3 +20,12 @@ ratio of idle to total cycles to compute CPU util.
 We will still calculate fractions for user, kernel and interrupt, and
 report them in debug (-d) output, but with a warning for interrupt
 time.  See src/netcpu_pstatnew.c for all the details.
+
+Up through HP-UX 11.23 (aka 11iV2) if you enable burst mode, and
+happen to send sub-MSS requests and/or responses you _cannot_ assume
+that the packet per second rate on the wire will match the transaction
+per second rate reported by netperf, even if you set TCP_NODELAY with
+the test-specific -D option.  The HP-UX 11.X TCP stack likely will be
+generating some immediate 'standalone' ACKnowledgements which may not
+be generated by other stacks.  This has been reported to the HP-UX TCP
+folks, and an announcement will be made when that issue is resolved.
