@@ -15,6 +15,15 @@ tests use libsctp, the above no longer applies.  It should all just be
 automagic (although for SCTP you still must --enable-sctp at configure
 time)
 
-beware CPU util figures on anything before Solaris 10 that does not
+Beware CPU util figures on anything before Solaris 10 that does not
 say 100%, and still be a triffle cautious with Solaris 10 CPU util
-reports.
+reports.  The CPU time accounting mechanisms either do not track time
+spent servicing interrupts, or do so in parallel with time spent in
+user/kernel/idle which means that some idle time isn't _really_ idle
+time.
+
+And beyond that, it is still not clear if the CPU utilization reported
+on systems with hardware threading support (eg UltraSPARC-T1) is
+really accurate even ignoring the issue with interrupt time.  It is
+likely that to be truely accurate, it is necessary to know how much
+"real work" any one strand performed.
